--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
   <main>
     <picture>
-      <source srcset="/assets/images/illustration-sign-up-mobile.svg" media="(max-width:629px)">
-      <img src="/assets/images/illustration-sign-up-desktop.svg" alt="">
+      <source srcset="https://github.com/Tonilocke/newsletter-signup-form/blob/main/assets/images/illustration-sign-up-mobile.svg" media="(max-width:629px)">
+      <img src="https://github.com/Tonilocke/newsletter-signup-form/blob/main/assets/images/illustration-sign-up-desktop.svg" alt="signup illustration">
     </picture>
     <!-- Sign-up form start -->
      <div class="signup-form">
       <h1>Stay updated!</h1>
       <p>Join 60,000+ product managers receiving monthly updates on:</p>
       <ul>
-        <li><img src="/assets/images/icon-list.svg" alt="check image">Product discovery and building what matters</li>
-        <li><img src="/assets/images/icon-list.svg" alt="check image">Measuring to ensure updates are a success</li>
-        <li><img src="/assets/images/icon-list.svg" alt="check image">And much more!</li>
+        <li><img src="https://github.com/Tonilocke/newsletter-signup-form/blob/main/assets/images/icon-list.svg" alt="check image">Product discovery and building what matters</li>
+        <li><img src="https://github.com/Tonilocke/newsletter-signup-form/blob/main/assets/images/icon-list.svg" alt="check image">Measuring to ensure updates are a success</li>
+        <li><img src="https://github.com/Tonilocke/newsletter-signup-form/blob/main/assets/images/icon-list.svg" alt="check image">And much more!</li>
       </ul>
       <form action="/">
         <label for="email">Email address</label>
